Autodelete smapsRunnable

The runnable has an early return on error conditions. This means
finished() might never be called.

Now we've removed the accessor and provide the return value in the
signal we can just set autoDelete.

BUG: 428048


(cherry picked from commit ebcf87527c32db0b6685c63a450489d2c6727069)